--- a/styles.css
+++ b/styles.css
@@ -222,3 +222,20 @@ span.action {
 }
 
 
+html {
+  margin: 0;
+}
+body {
+  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+  margin: 0;
+}
+
+section .waypoint {
+  font-style: italic;
+}
+
+a, a:visited {
+  color: #5601FF;
+  text-decoration: underline;
+  box-shadow: none;
+}
